# legel-mcp

./: CLAUDE.md  README.md  USAGE_GUIDE.md  auto_discover.py  claude_desktop_config.json  demo.py  future_features_plan.md  law.json  mcp_server.py  mcp_server_final.py  mcp_server_optimized.py  mcp_server_simple.py  pyproject.toml  requirements.txt  test_mcp.py
.claude/: settings.local.json
script/: get_all_law_text.py  get_law_code.py  get_signal_txt.py  law_keyword_search.py
src/taiwan_law_mcp/: __init__.py  __main__.py  law_client.py  server.py
