[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "taiwan-law-mcp"
version = "0.2.1"
description = "台灣法規查詢 MCP 伺服器 - 優化版本"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Law MCP Developer" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.28.0",
    "beautifulsoup4>=4.11.0",
    "mcp>=1.0.0",
    "lxml>=4.9.0; sys_platform != 'win32'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
taiwan-law-mcp = "taiwan_law_mcp.server:main_sync"

[project.urls]
Homepage = "https://github.com/your-username/taiwan-law-mcp"
Repository = "https://github.com/your-username/taiwan-law-mcp"
Issues = "https://github.com/your-username/taiwan-law-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/taiwan_law_mcp"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.ruff]
line-length = 100
target-version = "py38"
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "ICN", "PIE", "T20", "Q"]
ignore = ["S101", "S603", "S607"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"